Updated copyright statements

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -11,7 +11,7 @@
          bootstrap="vendor/autoload.php"
 >
     <testsuites>
-        <testsuite name="PhpRulez test suite">
+        <testsuite name="UniversalMatcher test suite">
             <directory>./tests/</directory>
         </testsuite>
     </testsuites>
